--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,8 +7,8 @@
     <body>
         <h1>Login to <%=shopName%></h1>
         <form method="POST" action="/loggedin">
-            <p>Username: <input id="username" type="text" name="username" placeholder="Username..." /></p>
-            <p>Password: <input id="password" type="password" name="password" placeholder=" Password..." /></p>
+            <p>Username: <input id="username" type="text" name="username" placeholder="Username..." required/></p>
+            <p>Password: <input id="password" type="password" name="password" placeholder=" Password..." required/></p>
             <input type="submit" value="Login" />
         </form>
     </body>
