--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -7,8 +7,8 @@
   <body>
     <h1><%=shopName%>: Add book</h1>
     <form method="POST" action="/bookadded">
-        <p>Book name: <input id="name" type="text" name="name" value="" /></p>
-        <p>Price: <input id="price" type="text" name="price" value="" /></p>
+        <p>Book name: <input id="name" type="text" name="name" value="" required/></p>
+        <p>Price: <input id="price" type="text" name="price" value="" required/></p>
         <input type="submit" value="Add Book" />
       </form>
   </body>
