--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,6 +5,20 @@
     <link rel="stylesheet"  type="text/css" href="main.css" />
   </head>
   <body>
+    <!-- Horizontal Navbar -->
+    <ul>
+      <li><a href="./">Home</a></li>
+      <li><a href="./search">Search</a></li>
+      <li><a href="./addbook">Add Book</a></li>
+      <li><a href="./list">List Books</a></li>
+      <li><a href="./bargains">Bargains</a></li>
+      <li><a href="./register">Register</a></li>
+      <li><a href="./listusers">List Users</a></li>
+      <li><a href="./deleteuser">Delete Users</a></li>
+      <li><a href="./login">Login</a></li>
+    </ul>
+    <!-- Horizontal Navbar -->
+    
     <h1>About <%=shopName%></h1>
     <p>We sell all sorts of books and nothing else!</p>
   </body>
