--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,7 +5,23 @@
     <link rel="stylesheet"  type="text/css" href="main.css" />
   </head>
   <body>
+    <!-- Horizontal Navbar -->
+    <ul>
+      <li><a href="./">Home</a></li>
+      <li><a href="./search">Search</a></li>
+      <li><a href="./addbook">Add Book</a></li>
+      <li><a href="./list">List Books</a></li>
+      <li><a href="./bargains">Bargains</a></li>
+      <li><a href="./register">Register</a></li>
+      <li><a href="./listusers">List Users</a></li>
+      <li><a href="./deleteuser">Delete Users</a></li>
+      <li><a href="./login">Login</a></li>
+    </ul>
+    <!-- Horizontal Navbar -->
+    
     <h1>Register for <%=shopName%></h1>
+
+    <!-- Registration Form -->
     <form method="POST" action="/registered">
       <p>Username: <input id="username" type="text" name="username" placeholder="Username..." required/></p>
       <p>First name: <input id="firstname" type="text" name="firstname" placeholder="First Name..." required/></p>
@@ -14,5 +30,7 @@
       <p>Password: <input id="password" type="password" name="password" placeholder=" Password..." required/></p>
       <input type="submit" value="Register" />
     </form>
+    <!-- Registration Form -->
+    
   </body>
 </html>
