--- a/public/main.css
+++ b/public/main.css
@@ -41,3 +41,30 @@ a:link {
     text-decoration: none;
     padding:5px;
   }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #fff;
+  }
+  
+  li {
+    float: left;
+    border: orangered 1px solid;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: orangered;
+    color: #fff;
+  }
