--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -5,12 +5,30 @@
     <link rel="stylesheet"  type="text/css" href="main.css" />
   </head>
   <body>
+
+    <!-- Horizontal Navbar -->
+    <ul>
+      <li><a href="./">Home</a></li>
+      <li><a href="./search">Search</a></li>
+      <li><a href="./addbook">Add Book</a></li>
+      <li><a href="./list">List Books</a></li>
+      <li><a href="./bargains">Bargains</a></li>
+      <li><a href="./register">Register</a></li>
+      <li><a href="./listusers">List Users</a></li>
+      <li><a href="./deleteuser">Delete Users</a></li>
+      <li><a href="./login">Login</a></li>
+    </ul>
+    <!-- Horizontal Navbar -->
+
+    <!-- Add Book Form -->
     <h1><%=shopName%>: Add book</h1>
     <form method="POST" action="/bookadded">
         <p>Book name: <input id="name" type="text" name="name" value="" required/></p>
         <p>Price: <input id="price" type="text" name="price" value="" required/></p>
         <input type="submit" value="Add Book" />
       </form>
+    <!-- Add Book Form -->
+    
   </body>
 </html>
 
