--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,10 +6,14 @@
     </head>
     <body>
         <h1>Login to <%=shopName%></h1>
+
+        <!-- Login Form -->
         <form method="POST" action="/loggedin">
             <p>Username: <input id="username" type="text" name="username" placeholder="Username..." required/></p>
             <p>Password: <input id="password" type="password" name="password" placeholder=" Password..." required/></p>
             <input type="submit" value="Login" />
         </form>
+        <!-- Login Form -->
+        
     </body>
 </html>
