--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,20 @@
     <body>
         <h1>Login to <%=shopName%></h1>
 
+    <!-- Horizontal Navbar -->
+    <ul>
+        <li><a href="./">Home</a></li>
+        <li><a href="./search">Search</a></li>
+        <li><a href="./addbook">Add Book</a></li>
+        <li><a href="./list">List Books</a></li>
+        <li><a href="./bargains">Bargains</a></li>
+        <li><a href="./register">Register</a></li>
+        <li><a href="./listusers">List Users</a></li>
+        <li><a href="./deleteuser">Delete Users</a></li>
+        <li><a href="./login">Login</a></li>
+    </ul>
+    <!-- Horizontal Navbar -->
+
         <!-- Login Form -->
         <form method="POST" action="/loggedin">
             <p>Username: <input id="username" type="text" name="username" placeholder="Username..." required/></p>
