--- a/public/main.css
+++ b/public/main.css
@@ -84,6 +84,7 @@ a:link {
     border-image-repeat: initial;
     min-width: -webkit-min-content;
     padding: 30px;
+    text-transform: capitalize;
   }
 
   .ghost-input{
