--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -18,7 +18,7 @@
       <li><a href="./deleteuser">Delete Users</a></li>
       <li><a href="./login">Login</a></li>
       <li><a href="./weather">Weather</a></li>
-      <li><a href="./tvshows.ejs">TV Shows</a></li>
+      <li><a href="./tvshows">TV Shows</a></li>
     </ul>
     <!-- Horizontal Navbar -->
 
