--- a/views/bargains.ejs
+++ b/views/bargains.ejs
@@ -24,13 +24,13 @@
       <li><a href="./deleteuser">Delete Users</a></li>
       <li><a href="./login">Login</a></li>
       <li><a href="./weather">Weather</a></li>
-      <li><a href="./tvshows.ejs">TV Shows</a></li>
+      <li><a href="./tvshows">TV Shows</a></li>
     </ul>
     <!-- Horizontal Navbar -->
     
     <h1><%=shopName%> Shop</h1>
     <h2>Here are our bargain books:</h2>
-
+    
     <!-- Table View of Bargain Books -->
     <table id="booklist_table"> 
       <tr>
