--- a/views/deleteuser.ejs
+++ b/views/deleteuser.ejs
@@ -9,6 +9,7 @@
         table#userlist_table {width: 100%; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
     </style>
     <body>
+
         <!-- Horizontal Navbar -->
         <ul>
             <li><a href="./">Home</a></li>
@@ -21,7 +22,7 @@
             <li><a href="./deleteuser">Delete Users</a></li>
             <li><a href="./login">Login</a></li>
             <li><a href="./weather">Weather</a></li>
-            <li><a href="./tvshows.ejs">TV Shows</a></li>
+            <li><a href="./tvshows">TV Shows</a></li>
         </ul>
         <!-- Horizontal Navbar -->
 
