--- a/views/tvshows.ejs
+++ b/views/tvshows.ejs
@@ -5,6 +5,7 @@
         <link rel="stylesheet"  type="text/css" href="main.css" />
     </head>
     <body>
+
         <!-- Horizontal Navbar -->
         <ul>
             <li><a href="./">Home</a></li>
@@ -17,7 +18,7 @@
             <li><a href="./deleteuser">Delete Users</a></li>
             <li><a href="./login">Login</a></li>
             <li><a href="./weather">Weather</a></li>
-            <li><a href="./tvshows.ejs">TV Shows</a></li>
+            <li><a href="./tvshows">TV Shows</a></li>
         </ul>
         <!-- Horizontal Navbar -->
         
@@ -31,6 +32,5 @@
         </form>
         <!-- Search Form/Input -->
         
-    
     </body>
 </html>
