--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,7 @@
         <link rel="stylesheet"  type="text/css" href="main.css" />
     </head>
     <body>
+        
         <h1>Login to <%=shopName%></h1>
 
         <!-- Horizontal Navbar -->
@@ -19,7 +20,7 @@
             <li><a href="./deleteuser">Delete Users</a></li>
             <li><a href="./login">Login</a></li>
             <li><a href="./weather">Weather</a></li>
-            <li><a href="./tvshows.ejs">TV Shows</a></li>
+            <li><a href="./tvshows">TV Shows</a></li>
         </ul>
         <!-- Horizontal Navbar -->
 
