--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
       </ul>
       <!-- Horizontal Navbar -->
 
-    <h1>Welcome to <%=shopName%></h1>
+    <h1 style="text-align: center; margin-top: 300px; font-size: 100px;">Welcome to <%=shopName%></h1>
 
   </body>
 </html>
