--- a/views/foodlist.ejs
+++ b/views/foodlist.ejs
@@ -15,16 +15,17 @@
     
     <!-- Horizontal Navbar -->
     <ul>
-      <li><a href="./">Home</a></li>
+      <li><a class="active" href="./">Home</a></li>
       <li><a href="about">About <%=shopName%></a></li>
       <li></li>
       <li class="dropdown">
-          <a class="active" href="javascript:void(0)" class="dropbtn">Food</a>
+          <a href="javascript:void(0)" class="dropbtn">Food</a>
           <div class="dropdown-content">
           <a href="foodsearch">Search for Foods</a>
           <a href="foodadd">Add Food</a>
           <a href="foodlist">List Foods</a>
           <a href="foodupdate">Update Foods</a>
+          <a href="fooddelete">Delete Foods</a>
           <a href="foodhighprotein">High Protein Foods</a>
       <li class="dropdown">
           <a href="javascript:void(0)" class="dropbtn">Users</a>
@@ -37,6 +38,7 @@
           <a href="login">Login</a>
           <a href="logout">Logout</a>
       <li><a href="register">Register with us</a></li>
+      <li><a href="api">API</a></li>
       </ul>
       <!-- Horizontal Navbar -->
     
