--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
           <a href="foodadd">Add Food</a>
           <a href="foodlist">List Foods</a>
           <a href="foodupdate">Update Foods</a>
+          <a href="fooddelete">Delete Foods</a>
           <a href="foodhighprotein">High Protein Foods</a>
       <li class="dropdown">
           <a href="javascript:void(0)" class="dropbtn">Users</a>
@@ -30,6 +31,7 @@
           <a href="login">Login</a>
           <a href="logout">Logout</a>
       <li><a href="register">Register with us</a></li>
+      <li><a href="api">API</a></li>
       </ul>
       <!-- Horizontal Navbar -->
 
