--- a/views/userlist.ejs
+++ b/views/userlist.ejs
@@ -14,7 +14,7 @@
 
     <!-- Horizontal Navbar -->
     <ul>
-        <li><a href="./">Home</a></li>
+        <li><a class="active" href="./">Home</a></li>
         <li><a href="about">About <%=shopName%></a></li>
         <li></li>
         <li class="dropdown">
@@ -24,9 +24,10 @@
             <a href="foodadd">Add Food</a>
             <a href="foodlist">List Foods</a>
             <a href="foodupdate">Update Foods</a>
+            <a href="fooddelete">Delete Foods</a>
             <a href="foodhighprotein">High Protein Foods</a>
         <li class="dropdown">
-            <a class="active" href="javascript:void(0)" class="dropbtn">Users</a>
+            <a href="javascript:void(0)" class="dropbtn">Users</a>
             <div class="dropdown-content">
             <a href="userlist">List Users</a>
             <a href="userdelete">Delete Users</a>
@@ -36,6 +37,7 @@
             <a href="login">Login</a>
             <a href="logout">Logout</a>
         <li><a href="register">Register with us</a></li>
+        <li><a href="api">API</a></li>
         </ul>
         <!-- Horizontal Navbar -->
 
